--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
 		"@babel/preset-env": "7.3.1",
 		"@babel/register": "7.0.0",
 		"autoprefixer": "9.4.3",
-		"bower": "^1.8.8",
-		"browser-sync": "^2.26.12",
+		"bower": "^1.8.12",
+		"browser-sync": "^2.26.13",
+		"caniuse-lite": "^1.0.30001179",
 		"css-declaration-sorter": "4.0.1",
 		"cssnano": "4.1.8",
 		"del": "3.0.0",
@@ -39,7 +40,7 @@
 		"gulp-typescript": "^5.0.1",
 		"gulp-uglify": "3.0.2",
 		"remixicon": "^2.5.0",
-		"swiper": "^6.3.5",
+		"swiper": "^6.4.8",
 		"vendors": "^1.0.4"
 	}
 }
