--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,7 @@
 	"editor.wordWrap": "on",
 	"codeMap.ShowOrHide": "hide",
 	"codeMap.GraphMode": "NotSelect",
-	"compile-hero.disable-compile-files-on-did-save-code": true
+	"compile-hero.disable-compile-files-on-did-save-code": true,
+	"ponicode.testSettings.testLocation.locationType": "Same folder as source file",
+	"ponicode.testSettings.testLocation.path": "{rootDir}/{filePath}/{fileName}.test.{ext}"
 }
